fixed console error with dash board page

--- a/dashboard.html
+++ b/dashboard.html
@@ -466,7 +466,9 @@
         }
 
         // Initialize
-        loadDashboard();
+        if(requireAuth()) {
+            loadDashboard();
+        }
     </script>
 </body>
 </html>
