--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Login | Wanderlust</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         :root {
             --primary: #FF6B6B;
@@ -171,7 +172,7 @@
     </style>
 </head>
 <body>
-    <div class="auth-container">
+    <div class="auth-container d-flex flex-column">
         <a href="index.html" class="back-home">
             <i class="fas fa-arrow-left"></i> Back to Home
         </a>
